

json_resp_academic_degrees_after = [
        {
            "id": 1,
            "name": "CSc."
        },
        {
            "id": 8,
            "name": "DiS."
        },
        {
            "id": 5,
            "name": "dr.h.c."
        },
        {
            "id": 2,
            "name": "Dr.Sc."
        },
        {
            "id": 7,
            "name": "MBA"
        },
        {
            "id": 3,
            "name": "ml."
        },
        {
            "id": 9,
            "name": "MSc."
        },
        {
            "id": 0,
            "name": "neuvedeno"
        },
        {
            "id": 6,
            "name": "Ph.D."
        },
        {
            "id": 4,
            "name": "st."
        }
    ]
json_resp_academic_degrees_before = [
      {
        "id": 124,
        "name": "Ak.arch."
      },
      {
        "id": 122,
        "name": "Ak.mal."
      },
      {
        "id": 123,
        "name": "Ak.soch."
      },
      {
        "id": 999999,
        "name": "Akademisch"
      },
      {
        "id": 91,
        "name": "Bc."
      },
      {
        "id": 125,
        "name": "Dipl.ek."
      },
      {
        "id": 127,
        "name": "Dipl.inf"
      },
      {
        "id": 126,
        "name": "Dipl.tech."
      },
      {
        "id": 145,
        "name": "Dis."
      },
      {
        "id": 100,
        "name": "doc."
      },
      {
        "id": 109,
        "name": "doc.Dr."
      },
      {
        "id": 103,
        "name": "doc.Dr.Ing"
      },
      {
        "id": 102,
        "name": "doc.Ing."
      },
      {
        "id": 110,
        "name": "doc.Ing.ar"
      },
      {
        "id": 121,
        "name": "doc.JUDr."
      },
      {
        "id": 104,
        "name": "doc.MUDr."
      },
      {
        "id": 108,
        "name": "doc.MVDr."
      },
      {
        "id": 105,
        "name": "doc.PaedDr"
      },
      {
        "id": 106,
        "name": "doc.PhDr."
      },
      {
        "id": 107,
        "name": "doc.RNDr."
      },
      {
        "id": 101,
        "name": "doc.RNDr."
      },
      {
        "id": 3,
        "name": "Dr."
      },
      {
        "id": 59,
        "name": "Dr.Ing."
      },
      {
        "id": 128,
        "name": "Dr.Mgr."
      },
      {
        "id": 129,
        "name": "Dr.PaedDr."
      },
      {
        "id": 85,
        "name": "DrPh."
      },
      {
        "id": 47,
        "name": "Ing."
      },
      {
        "id": 95,
        "name": "Ing.arch."
      },
      {
        "id": 150,
        "name": "Ing.et.Ing"
      },
      {
        "id": 132,
        "name": "Ing.Mgr."
      },
      {
        "id": 135,
        "name": "Ing.MVDr."
      },
      {
        "id": 134,
        "name": "Ing.RNDr."
      },
      {
        "id": 7,
        "name": "JUDr."
      },
      {
        "id": 149,
        "name": "JUDr. Mgr."
      },
      {
        "id": 130,
        "name": "JUDr.Ing."
      },
      {
        "id": 131,
        "name": "JUDr.PhDr."
      },
      {
        "id": 148,
        "name": "MDDr."
      },
      {
        "id": 92,
        "name": "MgA."
      },
      {
        "id": 20,
        "name": "Mgr."
      },
      {
        "id": 136,
        "name": "Mgr.MUDr."
      },
      {
        "id": 146,
        "name": "MgrArt."
      },
      {
        "id": 83,
        "name": "MSDr."
      },
      {
        "id": 8,
        "name": "MUDr."
      },
      {
        "id": 84,
        "name": "MVDr."
      },
      {
        "id": 0,
        "name": "Neuvedeno"
      },
      {
        "id": 94,
        "name": "PaedDr."
      },
      {
        "id": 133,
        "name": "PaedDr.Ing"
      },
      {
        "id": 93,
        "name": "PharmDr."
      },
      {
        "id": 144,
        "name": "PhD."
      },
      {
        "id": 9,
        "name": "PhDr."
      },
      {
        "id": 137,
        "name": "PhDr.Ing."
      },
      {
        "id": 138,
        "name": "PhDr.JUDr."
      },
      {
        "id": 140,
        "name": "PhDr.Mgr."
      },
      {
        "id": 139,
        "name": "PhDr.MUDr."
      },
      {
        "id": 90,
        "name": "PhMr."
      },
      {
        "id": 66,
        "name": "prof."
      },
      {
        "id": 111,
        "name": "prof.Dr."
      },
      {
        "id": 141,
        "name": "prof.Dr.In"
      },
      {
        "id": 112,
        "name": "prof.Ing."
      },
      {
        "id": 115,
        "name": "prof.Ing.M"
      },
      {
        "id": 113,
        "name": "prof.MUDr."
      },
      {
        "id": 147,
        "name": "prof.PhDr."
      },
      {
        "id": 114,
        "name": "prof.RNDr."
      },
      {
        "id": 10,
        "name": "RNDr."
      },
      {
        "id": 142,
        "name": "RNDr.Ing"
      },
      {
        "id": 143,
        "name": "RNDr.PhDr."
      },
      {
        "id": 98,
        "name": "RSDr."
      },
      {
        "id": 99,
        "name": "RTDr."
      },
      {
        "id": 96,
        "name": "ThDr."
      },
      {
        "id": 97,
        "name": "ThLic."
      },
      {
        "id": 79,
        "name": "ThMr."
      }
    ]
json_resp_bank_codes = [
    {
        "bankCode": "0100",
        "name": "Komerční banka, a.s.",
        "shortName": "KOMB",
        "state": "CZ"
      },
      {
        "bankCode": "0300",
        "name": "Československá obchodní banka, a.s.",
        "shortName": "CEKO",
        "state": "CZ"
      },
      {
        "bankCode": "0600",
        "name": "MONETA  Money Bank, a.s.",
        "shortName": "AGBA",
        "state": "CZ"
      },
      {
        "bankCode": "0710",
        "name": "Česká národní banka",
        "shortName": "CNBA",
        "state": "CZ"
      },
      {
        "bankCode": "0730",
        "name": "3.str. pro zúčt.- ČNB-zúčtovací centrum",
        "shortName": "CNBACC",
        "state": "CZ"
      },
      {
        "bankCode": "0800",
        "name": "Česká spořitelna, a.s.",
        "shortName": "CSPO",
        "state": "CZ"
      },
      {
        "bankCode": "100",
        "name": "Komerční banka, a.s. NEPOUŽÍVAT",
        "shortName": "KOMB",
        "state": "CZ"
      },
      {
        "bankCode": "2010",
        "name": "Fio banka, a.s.",
        "shortName": "FIOZ",
        "state": "CZ"
      },
      {
        "bankCode": "2020",
        "name": "MUFG Bank (Europe) N.V. Prague Branch",
        "shortName": "BOTK",
        "state": "CZ"
      },
      {
        "bankCode": "2030",
        "name": "Československé úvěrní družstvo",
        "shortName": "VVDZ",
        "state": "CZ"
      },
      {
        "bankCode": "2040",
        "name": "UNIBON - spořitelní a úvěrní družstvo",
        "shortName": "UNIB",
        "state": "CZ"
      },
      {
        "bankCode": "2050",
        "name": "WPB Capital, spořitelní družstvo",
        "shortName": "WPBZ",
        "state": "CZ"
      },
      {
        "bankCode": "2060",
        "name": "Citfin, spořitelní družstvo",
        "shortName": "CITF",
        "state": "CZ"
      },
      {
        "bankCode": "2070",
        "name": "TRINITY BANK a.s.",
        "shortName": "MPUZ",
        "state": "CZ"
      },
      {
        "bankCode": "2100",
        "name": "Hypoteční banka, a.s.",
        "shortName": "CMHB",
        "state": "CZ"
      },
      {
        "bankCode": "2200",
        "name": "Peněžní dům, spořitelní družstvo",
        "shortName": "PDSD",
        "state": "CZ"
      },
      {
        "bankCode": "2210",
        "name": "ERB bank, a.s., v likvidaci",
        "shortName": "FICH",
        "state": "CZ"
      },
      {
        "bankCode": "2220",
        "name": "Artesa, spořitelní družstvo",
        "shortName": "ARTZ",
        "state": "CZ"
      },
      {
        "bankCode": "2230",
        "name": "AXA Bank Europe, organizační složka",
        "shortName": "AXAB",
        "state": "CZ"
      },
      {
        "bankCode": "2240",
        "name": "Poštová banka, a.s., pobočka ČR",
        "shortName": "PABKCA",
        "state": "CZ"
      },
      {
        "bankCode": "2250",
        "name": "Banka CREDITAS a.s.",
        "shortName": "CREZ",
        "state": "CZ"
      },
      {
        "bankCode": "2260",
        "name": "NEY spořitelní družstvo",
        "shortName": " ",
        "state": "CZ"
      },
      {
        "bankCode": "2310",
        "name": "ZUNO doběh pro Raiffeisenbank 31.11.2017",
        "shortName": "ZUNO",
        "state": "CZ"
      },
      {
        "bankCode": "2400",
        "name": "eBanka, a.s.",
        "shortName": "EXPA",
        "state": "CZ"
      },
      {
        "bankCode": "2600",
        "name": "Citibank Europe plc, org. složka",
        "shortName": "CITI",
        "state": "CZ"
      },
      {
        "bankCode": "2700",
        "name": "UniCredit Bank Czech Rep. and Slov. a.s.",
        "shortName": "CABV",
        "state": "CZ"
      },
      {
        "bankCode": "300",
        "name": "Československá obchodní banka, a.s. NEPO",
        "shortName": "CEKO",
        "state": "CZ"
      },
      {
        "bankCode": "3030",
        "name": "Air bank,a.s.",
        "shortName": "BAIR",
        "state": "CZ"
      },
      {
        "bankCode": "3050",
        "name": "BNP Paribas Personal Finance SA",
        "shortName": "BPPF",
        "state": "CZ"
      },
      {
        "bankCode": "3060",
        "name": "PKO BP S.A., Czech Branch",
        "shortName": "BPKO",
        "state": "CZ"
      },
      {
        "bankCode": "3500",
        "name": "ING Bank N.V.",
        "shortName": "INGB",
        "state": "CZ"
      },
      {
        "bankCode": "4000",
        "name": "Expobank CZ a.s.",
        "shortName": "DRES",
        "state": "CZ"
      },
      {
        "bankCode": "4300",
        "name": "Českomor. záruční a rozvoj. banka, a.s.",
        "shortName": "CMZR",
        "state": "CZ"
      },
      {
        "bankCode": "5000",
        "name": "Crédit Agricole Corporate and Investment",
        "shortName": "CRLY",
        "state": "CZ"
      },
      {
        "bankCode": "5400",
        "name": "The Royal Bank of Scotland plc, org.slož",
        "shortName": "ABNA",
        "state": "CZ"
      },
      {
        "bankCode": "5500",
        "name": "Raiffeisenbank a.s.",
        "shortName": "RZBC",
        "state": "CZ"
      },
      {
        "bankCode": "5800",
        "name": "J & T Banka, a.s.",
        "shortName": "JTBP",
        "state": "CZ"
      },
      {
        "bankCode": "600",
        "name": "GE Money Bank, a.s. NEPOUŽÍVAT",
        "shortName": "AGBA",
        "state": "CZ"
      },
      {
        "bankCode": "6000",
        "name": "PPF banka a.s.",
        "shortName": "PMBA",
        "state": "CZ"
      },
      {
        "bankCode": "6100",
        "name": "Equa bank, a.s.",
        "shortName": "ICBN",
        "state": "CZ"
      },
      {
        "bankCode": "6200",
        "name": "COMMERZBANK AG, pobočka Praha",
        "shortName": "COBA",
        "state": "CZ"
      },
      {
        "bankCode": "6210",
        "name": "mBank S.A., organizační složka",
        "shortName": "BREX",
        "state": "CZ"
      },
      {
        "bankCode": "6300",
        "name": "BNP Paribas S.A., pobočka ČR",
        "shortName": "GEBA",
        "state": "CZ"
      },
      {
        "bankCode": "6700",
        "name": "Všeobecná úverová banka, a.s. pob. Praha",
        "shortName": "SUBACA",
        "state": "CZ"
      },
      {
        "bankCode": "6800",
        "name": "Sberbank CZ, a.s.",
        "shortName": "VBOE",
        "state": "CZ"
      },
      {
        "bankCode": "710",
        "name": "Česká národní banka NEPOUŽÍVAT",
        "shortName": "CNBA",
        "state": "CZ"
      },
      {
        "bankCode": "7910",
        "name": "Deutsche Bank Aktiengesellschaft Prag",
        "shortName": "DEUT",
        "state": "CZ"
      },
      {
        "bankCode": "7940",
        "name": "Waldviertler Sparkasse von 1842 AG",
        "shortName": "SPWT",
        "state": "CZ"
      },
      {
        "bankCode": "7950",
        "name": "Raiffeisen stavební spořitelna a.s.",
        "shortName": "ARSS",
        "state": "CZ"
      },
      {
        "bankCode": "7960",
        "name": "ČSOB stavební spořitelna, a.s.",
        "shortName": "CSOBS",
        "state": "CZ"
      },
      {
        "bankCode": "7970",
        "name": "MONETA Stavební Spořitelna, a.s.",
        "shortName": "SSWT",
        "state": "CZ"
      },
      {
        "bankCode": "7980",
        "name": "doběh pro MONETA Money Bank do 30.6.2021",
        "shortName": "WUEH",
        "state": "CZ"
      },
      {
        "bankCode": "7990",
        "name": "Modrá pyramida stavební spořitelna, a.s.",
        "shortName": "VSPO",
        "state": "CZ"
      },
      {
        "bankCode": "800",
        "name": "Česká spořitelna, a.s.NEPOUŽÍVAT",
        "shortName": "CSPO",
        "state": "CZ"
      },
      {
        "bankCode": "8030",
        "name": "Volksbank Raiffeisenbank eG pobočka Cheb",
        "shortName": "DRBW",
        "state": "CZ"
      },
      {
        "bankCode": "8040",
        "name": "Oberbank AG pobočka ČR",
        "shortName": "SMWR",
        "state": "CZ"
      },
      {
        "bankCode": "8060",
        "name": "Stavební spořitelna ČS, a.s.",
        "shortName": "SSCS",
        "state": "CZ"
      },
      {
        "bankCode": "8070",
        "name": "HYPO stavební spořitelna a.s.",
        "shortName": "HYPS",
        "state": "CZ"
      },
      {
        "bankCode": "8090",
        "name": "Česká exportní banka, a.s.",
        "shortName": "CEXB",
        "state": "CZ"
      },
      {
        "bankCode": "8150",
        "name": "HSBC Continental Europe, Czech Republic",
        "shortName": "MIDL",
        "state": "CZ"
      },
      {
        "bankCode": "8190",
        "name": "Sparkasse Oberlausitz-Niederschlesien",
        "shortName": "WELADED",
        "state": "CZ"
      },
      {
        "bankCode": "8250",
        "name": "Bank of China (CEE) Ltd. Prague Branch",
        "shortName": "BKCH",
        "state": "CZ"
      },
      {
        "bankCode": "8255",
        "name": "Bank of Communications Co., Ltd., Prague",
        "shortName": "COMM",
        "state": "CZ"
      },
      {
        "bankCode": "8265",
        "name": "Industrial and Comercial Bank of China",
        "shortName": "ICBK",
        "state": "CZ"
      },
      {
        "bankCode": "9515",
        "name": "Centrální depozitář cenných papírů, a.s.",
        "shortName": " ",
        "state": "CZ"
      },
      {
        "bankCode": "9870",
        "name": "3.str. pro zúčt.- MasterCard Eur. SA ",
        "shortName": "MCEB",
        "state": "CZ"
      },
      {
        "bankCode": "9890",
        "name": "3.str. pro zúčt.- Vybrané operace KB",
        "shortName": "ZOKB",
        "state": "CZ"
      },
      {
        "bankCode": "9900",
        "name": "3.str. pro zúčt.- RM SYSTÉM, a.s.",
        "shortName": "RMSS",
        "state": "CZ"
      },
      {
        "bankCode": "9910",
        "name": "3.str. pro zúčt.-Centrální dep. c.p.a.s ",
        "shortName": "BRCP",
        "state": "CZ"
      },
      {
        "bankCode": "9960",
        "name": "3.str. pro zúčt.- ČNB-Krátkodobé dluhop.",
        "shortName": "TKDL",
        "state": "CZ"
      },
      {
        "bankCode": "9980",
        "name": "3.str. pro zúčt.- ČSOB a.s.- plat.karty",
        "shortName": "VISA",
        "state": "CZ"
      }]
json_resp_case_states = [
      {
        "id": 0,
        "name": "unknown"
      },
      {
        "id": 1,
        "name": "Příprava žádosti"
      },
      {
        "id": 2,
        "name": "Zpracování žádosti v továrně"
      },
      {
        "id": 3,
        "name": "Podepisování"
      },
      {
        "id": 4,
        "name": "Čerpání"
      },
      {
        "id": 5,
        "name": "Správa"
      },
      {
        "id": 6,
        "name": "Ukončeno"
      }
    ]
json_resp_paymentDays = [
        {
            "paymentDay": 10,
            "mandantId": 2,
            "isDefault": False
        },
        {
            "paymentDay": 10,
            "mandantId": 1,
            "isDefault": False
        },
        {
            "paymentDay": 15,
            "mandantId": 2,
            "isDefault": True
        },
        {
            "paymentDay": 15,
            "mandantId": 1,
            "isDefault": False
        },
        {
            "paymentDay": 20,
            "mandantId": 2,
            "isDefault": False
        },
        {
            "paymentDay": 20,
            "mandantId": 1,
            "isDefault": False
        },
        {
            "paymentDay": 25,
            "mandantId": 1,
            "isDefault": True
        }
    ]

